--- a/src/IdentityServerDemo.BlazorClient/wwwroot/appsettings.json
+++ b/src/IdentityServerDemo.BlazorClient/wwwroot/appsettings.json
@@ -8,6 +8,6 @@
     "AllowedScopes": [ "blazorApp", "openid", "profile" ],
     "ResponseType": "code",
     "RedirectUri": "https://localhost:44331/authentication/login-callback"
-    //This RedirectUri needs to be the same from IS4Security RedirectUris
+    //This RedirectUri needs to be the same in IS4Security RedirectUris
   }
 }
